removed providers graphic on smaller screens and fixed layout imbalances

--- a/src/pages/EventGateway/styles.css
+++ b/src/pages/EventGateway/styles.css
@@ -3,7 +3,7 @@
   > div {
     max-width: 1200px;
     margin: 0px auto;
-    padding: 5%;
+    padding: 40px 5%;
   }
 }
 
@@ -148,16 +148,19 @@
 
   .headingBlurbAndGraphic {
 
-    padding: 10px 0px;
+    padding: 10px 0px 30px 0px;
     text-align: center;
-
-    img {
-      margin-top: 40px;
-    }
 
     img:first-child {
       width: 50px;
       margin-top: 40px;
+    }
+
+    img:nth-child(3) {
+      margin-top: 60px;
+      @media (max-width: 600px) {
+        display: none;
+      }
     }
 
     > div {
@@ -184,11 +187,11 @@
   .sectionHeading {
     display: inline-block;
     margin: 0px auto;
-    padding: 15px 30px;
+    padding: 20px 30px 0px 30px;
     background-image: url('https://s3-us-west-2.amazonaws.com/assets.site.serverless.com/images/red-dot-grid.png');
     background-repeat: no-repeat;
     background-size: 40px;
-    background-position: 20px 15px;
+    background-position: 20px 20px;
     font-size: 2em;
     line-height: 1.5em;
   }
@@ -200,7 +203,7 @@
     flex: 1;
     @media (min-width: 600px) {
       flex-direction: row;
-      &:nth-child(odd) {
+      &:nth-child(odd) { 
         flex-direction: row-reverse;
       }
     }
